Added README notes, simplified fm_platform_attributes.cfg

--- a/platform/rrc_2x100gm/fm_platform_attributes.cfg
+++ b/platform/rrc_2x100gm/fm_platform_attributes.cfg
@@ -7,7 +7,7 @@
 #Optional Configuration. Default is NONE.
 # CONFIG, MOD_STATE, MOD_INTR, MOD_TYPE, PLAT_LOG
 # Use comma delimited for multiple entries, no spaces.
-# api.platform.config.debug text CONFIG
+#api.platform.config.debug text CONFIG,MOD_STATE,MOD_INTR,MOD_TYPE
 
 #=========================================================#
 # Total number of switches in the system
@@ -101,11 +101,6 @@ api.platform.config.switch.0.portIndex.1.lane.1.portMapping text "LOG=1 EPL=1 LA
 api.platform.config.switch.0.portIndex.1.lane.2.portMapping text "LOG=1 EPL=1 LANE=2"
 api.platform.config.switch.0.portIndex.1.lane.3.portMapping text "LOG=1 EPL=1 LANE=3"
 
-#api.platform.config.switch.0.portIndex.5.lane.0.portMapping text "LOG=5 EPL=1 LANE=0"
-#api.platform.config.switch.0.portIndex.6.lane.1.portMapping text "LOG=6 EPL=1 LANE=1"
-#api.platform.config.switch.0.portIndex.7.lane.2.portMapping text "LOG=7 EPL=1 LANE=2"
-#api.platform.config.switch.0.portIndex.8.lane.3.portMapping text "LOG=8 EPL=1 LANE=3"
-
 # QSFP1 (with different lane ordering)
 api.platform.config.switch.0.portIndex.2.lane.0.portMapping text "LOG=2 EPL=7 LANE=0"
 api.platform.config.switch.0.portIndex.2.lane.1.portMapping text "LOG=2 EPL=7 LANE=1"
@@ -138,7 +133,13 @@ api.platform.config.switch.0.portIndex.6.portMapping text "LOG=6 PCIE=6"
 #api.platform.config.switch.0.port.default.interfaceType text NONE
 
 api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE0
+api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE1
+api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE2
+api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE3
 api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE0
+api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE1
+api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE2
+api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE3
 
 
 
@@ -187,14 +188,6 @@ api.platform.config.switch.0.port.default.ethernetMode text DISABLED
 # AUTODETECT (100G,40G)
 api.platform.config.switch.0.portIndex.1.ethernetMode text AUTODETECT
 api.platform.config.switch.0.portIndex.2.ethernetMode text AUTODETECT
-
-# 4x25G
-# api.platform.config.switch.0.portIndex.1.ethernetMode text 25GBase-SR
-# api.platform.config.switch.0.portIndex.2.ethernetMode text 25GBase-SR
-
-# 4x10G
-# api.platform.config.switch.0.portIndex.1.ethernetMode text 10GBase-SR
-# api.platform.config.switch.0.portIndex.2.ethernetMode text 10GBase-SR
 
 
 
