--- a/platform/rrc_2x100gm/fm_platform_attributes.cfg
+++ b/platform/rrc_2x100gm/fm_platform_attributes.cfg
@@ -130,16 +130,10 @@ api.platform.config.switch.0.portIndex.6.portMapping text "LOG=6 PCIE=6"
 # Optional configuration. Default is NONE or specified by port.default.
 # NONE, SFPP, QSFP_LANE0, QSFP_LANE1, QSFP_LANE2, QSFP_LANE3
 
-#api.platform.config.switch.0.port.default.interfaceType text NONE
+api.platform.config.switch.0.port.default.interfaceType text NONE
 
 api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE0
-api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE1
-api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE2
-api.platform.config.switch.0.portIndex.1.interfaceType text QSFP_LANE3
 api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE0
-api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE1
-api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE2
-api.platform.config.switch.0.portIndex.2.interfaceType text QSFP_LANE3
 
 
 
