Updated general and configuration documentation

--- a/platform/rrc_2x100gm/fm_platform_attributes.cfg
+++ b/platform/rrc_2x100gm/fm_platform_attributes.cfg
@@ -14,13 +14,8 @@
 # Required configuration.
 api.platform.config.numSwitches int 1
 
-api.platform.config.switch.0.uioDevName text /dev/uio0
-
 api.platform.config.platformName text rrc_2x100gm
 
-#=========================================================#
-# Interrupt parameters
-api.platform.config.switch.0.msiEnabled bool true
 
 
 
@@ -37,6 +32,11 @@ api.platform.config.switch.0.msiEnabled bool true
 # If not specified then switch number is the same as switch index.
 api.platform.config.switch.0.switchNumber int 0
 
+api.platform.config.switch.0.uioDevName text /dev/uio0
+
+#=========================================================#
+# Interrupt parameters
+api.platform.config.switch.0.msiEnabled bool true
 
 #===================================================================#
 # LED polling period, for software driven LED
@@ -101,7 +101,7 @@ api.platform.config.switch.0.portIndex.1.lane.1.portMapping text "LOG=1 EPL=1 LA
 api.platform.config.switch.0.portIndex.1.lane.2.portMapping text "LOG=1 EPL=1 LANE=2"
 api.platform.config.switch.0.portIndex.1.lane.3.portMapping text "LOG=1 EPL=1 LANE=3"
 
-# QSFP1 (with different lane ordering)
+# QSFP1
 api.platform.config.switch.0.portIndex.2.lane.0.portMapping text "LOG=2 EPL=7 LANE=0"
 api.platform.config.switch.0.portIndex.2.lane.1.portMapping text "LOG=2 EPL=7 LANE=1"
 api.platform.config.switch.0.portIndex.2.lane.2.portMapping text "LOG=2 EPL=7 LANE=2"
@@ -183,7 +183,10 @@ api.platform.config.switch.0.port.default.ethernetMode text DISABLED
 api.platform.config.switch.0.portIndex.1.ethernetMode text AUTODETECT
 api.platform.config.switch.0.portIndex.2.ethernetMode text AUTODETECT
 
-
+# Set any other mode (100GBase-SR4, 40GBase-SR4, 25GBase-SR, 10GBase-SR)
+# 25G and 10G modes only get enabled on first lane
+#api.platform.config.switch.0.portIndex.1.ethernetMode text 10GBase-SR
+#api.platform.config.switch.0.portIndex.2.ethernetMode text 10GBase-SR
 
 
 #=============================================================================#
